--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
     <link href="src/styles.css" />
