updated the css and js file location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link href="src/styles.css" />
+    <link href="Shecodesproject/src/styles.css"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -118,7 +118,7 @@
      
     </div>
 
-    <script src="src/index.js"></script>
+    <script src="Shecodesproject/src/index.js"></script>
     
   </body>
 </html>
