added github reference in index,html and style adjustment in css

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <button type="submit" class="currentLocation">Current location </button>
      
     </div>
+    <a href="https://github.com/titiksha3006/Shecodesproject" target="_blank">Open-source code</a> by Titiksha
 
     <script src="src/index.js"></script>
     
