correcting index.html for submit  button and adjusting style on css file

--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@
                 </div>
               </div>
         </div>
-<br /> <br /> 
-<br/>
-<button type="submit" class="currentLocation">Current location </button>
 </div>
- <script src="src/index.js"></script>
- <small>
+<form>
+<input type="submit" class="currentLocation" value="Current location">
+</form>
+<footer>
+  <small>
 <a href="https://github.com/titiksha3006/Shecodesproject" target="_blank">Open-source code</a> by Titiksha
 </small>
+</footer>
+<script src="src/index.js"></script>
  </body>
 </html>
