added missing div tag , updated the css for footer

--- a/index.html
+++ b/index.html
@@ -111,17 +111,23 @@
                   <br />
                   <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" width="60"/>  
                 </div>
-              </div>
+              </div>  
+            </div>
         </div>
-</div>
+        
 <form>
 <input type="submit" class="currentLocation" value="Current location">
-</form>
-<footer>
+<form>
+  </div>
+  
+  
+<footer class="outside">
   <small>
 <a href="https://github.com/titiksha3006/Shecodesproject" target="_blank">Open-source code</a> by Titiksha
 </small>
 </footer>
+
 <script src="src/index.js"></script>
+
  </body>
 </html>
